# net-client-server

./: .gitignore  CMakeLists.txt
src/client/: client.cpp  client.h  clientConsole.cpp  clientConsole.h  console.cpp  console.h  main.cpp
src/core/: args.cpp  args.h  client.cpp  client.h  connection.h  message.h  net.cpp  net.h  packet.h  server.cpp  server.h  socket.cpp  socket.h  transport.cpp  transport.h  utils.h
src/server/: main.cpp  server.cpp  server.h
